--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ python-jose
 python-multipart
 SQLAlchemy~=2.0.31
 uvicorn
-passlib
-pytest
+passlib~=1.7.4
+pytest~=8.2.2
 httpx
 pytest-asyncio
 aiofiles
 jinja2
 starlette~=0.37.2
 pydantic~=2.7.4
+alembic~=1.13.2
